# OCP

./: .gitignore  .gitmodules  CMakeLists.txt  azure-pipelines.yml  build-bindings-job-new.yml  build-bindings-job.yml  dump_parsed.py  env.yml  environment.devenv.yml  ocp.toml
